adding nips 2019 paper

--- a/leili.bib
+++ b/leili.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @InProceedings{miao2019kernelized,
-  author    = {Miao, Ning and Zhou, Hao and Zhao, Chengqi and Li, Lei},
+  author    = {Miao, Ning and Zhou, Hao and Zhao, Chengqi and Shi, Wenxian and Li, Lei},
   booktitle = {the 33rd Conference on Neural Information Processing Systems (NeurIPS)},
   title     = {Kernelized Bayesian Softman for Text Generation},
   year      = {2019},
@@ -9,7 +9,7 @@
 }
 
 @InProceedings{zhao2019what,
-  author    = {Zhao, Zhichen and Li, Lei and Zhang, Bowen and Jiang, Yuning and Xu, Li and Wang, Meng and Ma, Weiying},
+  author    = {Zhao, Zhichen and Li, Lei and Zhang, Bowen and Wang, Meng and Jiang, Yuning and Xu, Li and Wang, Fengkun and Ma, Weiying},
   booktitle = {the 28th ACM International Conference on Information and Knowledge Management (CIKM)},
   title     = {What You Look Matters: Offline Evaluation of Advertising Creatives for Cold Start Problem},
   year      = {2019},
