--- a/leili.bib
+++ b/leili.bib
@@ -1,5 +1,50 @@
 % Encoding: UTF-8
 
+@InProceedings{huang2020span,
+  author    = {Xunpeng Huang and Xianfeng Liang and Zhengyang Liu and Lei Li and Yue Yu},
+  booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
+  title     = {{SPAN}: A Stochastic Projected Approximate Newton Method},
+  year      = {2020},
+  month     = feb,
+  abstract  = {Second-order optimization methods have desirable convergence properties. However, the exact Newton method requires expensive computation for the Hessian and its inverse. In this paper, we propose SPAN, a novel approximate and fast Newton method. SPAN computes the inverse of the Hessian matrix via low-rank approximation and stochastic Hessian-vector products. Our experiments on multiple benchmark datasets demonstrate that SPAN outperforms existing first-order and second-order optimization methods in terms of the convergence wall-clock time. Furthermore, we provide a theoretical analysis of the per-iteration complexity, the approximation error, and the convergence rate. Both the theoretical analysis and experimental results show that our proposed method achieves a better trade-off between the convergence rate and the per-iteration efficiency.},
+}
+
+@InProceedings{wang2020task,
+  author    = {Xinlong Wang and Wei Yin and Tao Kong and Yuning Jiang and Lei Li and Chunhua Shen},
+  booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
+  title     = {Task-Aware Monocular Depth Estimation for 3D Object Detection},
+  year      = {2020},
+  month     = feb,
+  abstract  = {Monocular depth estimation enables 3D perception from a single 2D image, thus attracting much research attention for years. Almost all methods treat foreground and background regions (``things and stuff'') in an image equally. However, not all pixels are equal. Depth of foreground objects plays a crucial role in 3D object recognition and localization. To date how to boost the depth prediction accuracy of foreground objects is rarely discussed. In this paper, we first analyse the data distributions and interaction of foreground and background, then propose the foreground-background separated monocular depth estimation (ForeSeE) method, to estimate the foreground depth and background depth using separate optimization objectives and depth decoders. Our method significantly improves the depth estimation performance on foreground objects. Applying ForeSeE to 3D object detection, we achieve 7.5 AP gains and set new state-of-the-art results among other monocular methods.},
+}
+
+@InProceedings{wu2020importance,
+  author    = {Qingyang Wu and Lei Li and Hao Zhou and Ying Zeng and Zhou Yu},
+  booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
+  title     = {Importance-Aware Learning for Neural Headline Editing},
+  year      = {2020},
+  month     = feb,
+  abstract  = {Many social media news writers are not professionally trained. Therefore, social media platforms have to hire professional editors to adjust amateur headlines to attract more readers. We propose to automate this headline editing process through neural network models to provide more immediate writing support for these social media news writers. To train such a neural headline editing model, we collected a dataset which contains articles with original headlines and professionally edited headlines. However, it is expensive to collect a large number of professionally edited headlines. To solve this low-resource problem, we design an encoder-decoder model which leverages large scale pre-trained language models. We further improve the pre-trained model's quality by introducing a headline generation task as an intermediate task before the headline editing task. Also, we propose Self Importance-Aware (SIA) loss to address the different levels of editing in the dataset by down-weighting the importance of easily classified tokens and sentences. With the help of Pre-training, Adaptation, and SIA, the model learns to generate headlines in the professional editor's style. Experimental results show that our method significantly improves the quality of headline editing comparing against previous methods.},
+}
+
+@InProceedings{yang2020towards,
+  author    = {Jiacheng Yang and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Weinan Zhang and Yong Yu and Lei Li},
+  booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
+  title     = {Towards Making the Most of BERT in Neural Machine Translation},
+  year      = {2020},
+  month     = feb,
+  abstract  = {GPT-2 and BERT demonstrate the effectiveness of using pre-trained language models (LMs) on various natural language processing tasks. However, LM fine-tuning often suffers from catastrophic forgetting when applied to resource-rich tasks.
+In this work, we introduce a concerted training framework (\method) that is the key to integrate the pre-trained LMs to neural machine translation (NMT).
+Our proposed \method consists of three techniques:
+\begin{inparaenum}[\it a)]
+\item asymptotic distillation to ensure that the NMT model can retain the previous pre-trained knowledge;
+\item a dynamic switching gate to avoid catastrophic forgetting of pre-trained knowledge; and
+\item a strategy to adjust the learning paces according to a scheduled policy.
+\end{inparaenum}
+Our experiments in machine translation show \method gains of up to 3 BLEU score on the WMT14 English-German language pair which even surpasses the previous state-of-the-art pre-training aided NMT by 1.4 BLEU score.
+While for the large WMT14 English-French task with 40 millions of sentence-pairs, our base model still significantly improves upon the state-of-the-art Transformer big model by more than 1 BLEU score.},
+}
+
 @InProceedings{miao2019kernelized,
   author    = {Miao, Ning and Zhou, Hao and Zhao, Chengqi and Shi, Wenxian and Li, Lei},
   booktitle = {the 33rd Conference on Neural Information Processing Systems (NeurIPS)},
